# OPC

./: README.md
2_fnos-init/: README.md
2_fnos-init/scripts/: claude.sh.template  install_tools.sh
opc-cli/: .gitignore  QUICKSTART_WINDOWS.md  SKILL.md  WINDOWS_SUPPORT.md  WINDOWS_USER_GUIDE.md  generate_karaoke.py  opc.bat  opc.py  pyproject.toml  quick_test.bat  start_dashboard.bat
opc-cli/dashboard/server/: package-lock.json
opc-cli/dashboard/server/services/cut/: asr.service.js
opc-cli/scripts/shared/: platform.py
